<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Is air clean</string>
    <string name="content_authority">com.goodcodeforfun.isairclean</string>
    <string name="sync_account_type">isairclean.goodcodeforfun.com</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="format_notification"><xliff:g id="cityName">%1$s</xliff:g> <xliff:g id="intensity">%2$s</xliff:g>&#160;kgCO2/MWh</string>


    <string name="pref_lat_key" translatable="false">lat</string>
    <string name="pref_lat_default" translatable="false">64.7488</string>
    <string name="pref_lon_key" translatable="false">lon</string>
    <string name="pref_lon_default" translatable="false">-147.353</string>
    <string name="pref_prev_location_key" translatable="false">prevLocation</string>
    <string name="pref_prev_location_default" translatable="false" />
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false" />
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Location Change Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_enable_location_updates_key" translatable="false">enable_location</string>
    <string name="pref_enable_location_updates_label">Location Updates</string>
    <string name="pref_enable_location_updates_true">Enabled</string>
    <string name="pref_enable_location_updates_false">Not Enabled</string>
    <string name="pref_enable_location_updates_default" translatable="false">true</string>
    <string name="action_share_title">Share</string>
    <string name="current_label">Current:</string>
    <string name="tonns_co2">&#160;tons CO2</string>
    <string name="mwh_energy">&#160;MWh energy</string>
    <string name="kg_co2_per_mwh">&#160;kg CO2 per MWh</string>
    <string name="future_label">Future:</string>
    <string name="no_data">…</string>
    <string name="kg_co2_short">&#160;kg CO2/MWh</string>
    <string-array name="citiesDummyList">
        <item>Mountain View</item>
        <item>Kiev</item>
        <item>Gotham</item>
        <item>Minsk</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_text">Is air clean app is a location based client for CARMA.org database. Carbon Monitoring for Action (CARMA) contains information about the carbon emissions of over 60,000 power plants and 20,000 power companies worldwide.</string>
    <string name="logo_content_description">logo</string>
    <string name="splash_button_label">Choose location</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">Answering the question - no, the air is not clean. In fact it\'s not clean for like 60 years already. But the real problem is that it\'s not getting better! Unfortunately, not much can practically be done about it right now, but we should be constantly thinking on the related topics, be it the global warming or the rainforests extermination. Whatever the outcome will be, the cause of the tragedy is We, The Humanity. So be mindful and we will save the planet! Or extinct…</string>
    <string name="action_about">Is air clean?</string>
    <string name="other_renewable_label">Other renewable</string>
    <string name="nuclear_label">Nuclear</string>
    <string name="fossil_label">Fossil</string>
    <string name="hydro_label">Hydro</string>
</resources>
