<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/air_light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goodcodeforfun.isairclean.fragments.SplashActivityFragment">

    <TextView
        android:id="@+id/splashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splashTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/ic_logo" />

    <Button
        android:id="@+id/splashButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="15dp"
        android:text="@string/splash_button_label"
        android:textColor="@color/air_light_blue"
        android:textSize="22sp" />

</RelativeLayout>
