<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.goodcodeforfun.isairclean.DetailActivity$PlaceholderFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/detailCurrentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_label"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/detailCurrentCarbonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailCurrentCarbonLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tonns_co2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detailCurrentEnergyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailCurrentEnergyLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mwh_energy"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detailCurrentIntensityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailCurrentIntensityLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_co2_per_mwh"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/detailFutureLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future_label"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/detailFutureCarbonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailFutureCarbonLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tonns_co2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detailFutureEnergyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailFutureEnergyLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mwh_energy"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/detailFutureIntensityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/detailFutureIntensityLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_co2_per_mwh"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
