<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.goodcodeforfun.isairclean.fragments.SummaryFragmentCurrent">

    <LinearLayout
        android:id="@+id/summaryCurrentWrapLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/summaryCurrentLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/current_label"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/summaryCurrentCarbonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/summaryCurrentCarbonLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tonns_co2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/summaryCurrentEnergyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/summaryCurrentEnergyLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/mwh_energy"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/summaryCurrentIntensityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/summaryCurrentIntensityLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/kg_co2_per_mwh"
            android:textColor="@color/white"
            android:paddingBottom="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/frameLayout"
        android:layout_toRightOf="@+id/summaryCurrentWrapLinearLayout"
        android:layout_toEndOf="@+id/summaryCurrentWrapLinearLayout"
        android:weightSum="5">

        <com.echo.holographlibrary.PieGraph
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/graph"
            custom:pieOuterBorder="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/legend_rect_hydro"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView3"
                android:src="@drawable/legend_rect_fossil"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:id="@+id/textView2"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView4"
                android:src="@drawable/legend_rect_nuclear"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:id="@+id/textView5"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView5"
                android:src="@drawable/legend_rect_renewable"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pieChartCurrentView"
        android:layout_alignRight="@+id/pieChartCurrentView"
        android:layout_below="@+id/summaryCurrentWrapLinearLayout" />

</RelativeLayout>
